# Edge-AI-Camera-Monitor-Motion-Security-Guard

./: CMakeLists.txt  Plans.docx  README.md  implementation_plan.md
assets/qml/: main.qml
build-csx/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  CyberSentinelX.sln  CyberSentinelX.vcxproj  CyberSentinelX.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  csx_alerts.vcxproj  csx_alerts.vcxproj.filters  csx_behavior.vcxproj  csx_behavior.vcxproj.filters  csx_camera.vcxproj  csx_camera.vcxproj.filters  csx_core.vcxproj  csx_core.vcxproj.filters  csx_database.vcxproj  csx_database.vcxproj.filters  csx_hud.vcxproj  csx_hud.vcxproj.filters  csx_motion.vcxproj  csx_motion.vcxproj.filters  csx_radar.vcxproj  csx_radar.vcxproj.filters  csx_recognition.vcxproj  csx_recognition.vcxproj.filters  csx_recording.vcxproj  csx_recording.vcxproj.filters  csx_threat.vcxproj  csx_threat.vcxproj.filters  csx_tracking.vcxproj  csx_tracking.vcxproj.filters  csx_ui.vcxproj  csx_ui.vcxproj.filters  csx_ui_autogen.vcxproj  (+9 more)
build-csx/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-csx/Release/: csx_alerts.lib  csx_behavior.lib  csx_camera.lib  csx_database.lib  csx_hud.lib  csx_motion.lib  csx_radar.lib  csx_recognition.lib  csx_recording.lib  csx_threat.lib  csx_tracking.lib  csx_ui.lib  csx_utils.lib  csx_voice.lib  sqlite3.lib
build-csx/csx_ui_autogen/: deps  mocs_compilation_Release.cpp
build-csx/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  csx_behavior_tests.vcxproj  csx_behavior_tests.vcxproj.filters  csx_behavior_tests_74785a0e_Debug_include.cmake  csx_behavior_tests_74785a0e_MinSizeRel_include.cmake  csx_behavior_tests_74785a0e_RelWithDebInfo_include.cmake  csx_behavior_tests_74785a0e_Release_include.cmake  csx_behavior_tests_74785a0e_include.cmake  csx_behavior_tests_autogen.vcxproj  csx_behavior_tests_autogen.vcxproj.filters  csx_behavior_tests_autogen_timestamp_deps.vcxproj  csx_camera_tests.vcxproj  csx_camera_tests.vcxproj.filters  csx_camera_tests_74785a0e_Debug_include.cmake  csx_camera_tests_74785a0e_MinSizeRel_include.cmake  csx_camera_tests_74785a0e_RelWithDebInfo_include.cmake  csx_camera_tests_74785a0e_Release_include.cmake  csx_camera_tests_74785a0e_include.cmake  csx_camera_tests_autogen.vcxproj  csx_camera_tests_autogen.vcxproj.filters  csx_camera_tests_autogen_timestamp_deps.vcxproj  csx_core_tests.vcxproj  csx_core_tests.vcxproj.filters  csx_core_tests_74785a0e_Debug_include.cmake  csx_core_tests_74785a0e_MinSizeRel_include.cmake  csx_core_tests_74785a0e_RelWithDebInfo_include.cmake  csx_core_tests_74785a0e_Release_include.cmake  csx_core_tests_74785a0e_include.cmake  csx_core_tests_autogen.vcxproj  csx_core_tests_autogen.vcxproj.filters  csx_core_tests_autogen_timestamp_deps.vcxproj  csx_database_tests.vcxproj  csx_database_tests.vcxproj.filters  csx_database_tests_74785a0e_Debug_include.cmake  csx_database_tests_74785a0e_MinSizeRel_include.cmake  (+77 more)
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ModuleHelpers.cmake
config/: default.json
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  BUILD.md  INSTALL.md  UI_VISION.md  USER_GUIDE.md
docs/MODULES/: 01_core.md  02_utils.md  03_camera.md  04_motion.md  05_tracking.md  06_recognition.md  07_database.md  08_behavior.md  09_threat.md  10_recording.md  11_hud.md
logs/: ui-test-out.txt  ui-test2-out.txt
scripts/: download-models.ps1  package.ps1  run.ps1
src/alerts/: AlertManager.cpp  AlertManager.hpp  AlertPolicy.hpp  NotificationCenter.cpp  NotificationCenter.hpp
src/app/: Application.cpp  Application.hpp  ServiceBootstrap.cpp  ServiceBootstrap.hpp  UiBootstrap.cpp  UiBootstrap.hpp  main.cpp
src/behavior/: AnomalyScorer.cpp  AnomalyScorer.hpp  BaselineLearner.cpp  BaselineLearner.hpp  BehaviorEngine.cpp  BehaviorEngine.hpp  BehaviorSettings.cpp  BehaviorSettings.hpp  Geometry.cpp  Geometry.hpp  IntrusionDetector.cpp  IntrusionDetector.hpp  LoiteringDetector.cpp  LoiteringDetector.hpp  MotionPatternAnalyzer.cpp  MotionPatternAnalyzer.hpp  TamperDetector.cpp  TamperDetector.hpp
src/database/: Database.cpp  Database.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp
src/radar/: PolarMapper.cpp  PolarMapper.hpp  RadarModel.cpp  RadarModel.hpp  SweepController.cpp  SweepController.hpp
src/recognition/: ArcFaceEmbedder.cpp  ArcFaceEmbedder.hpp  EmbeddingCache.cpp  EmbeddingCache.hpp  EmbeddingMath.cpp  EmbeddingMath.hpp  FaceDatabase.cpp  FaceDatabase.hpp  FaceEnrollmentService.cpp  (+10 more)
tests/: CMakeLists.txt
tests/performance/: FpsTargetTest.cpp  FpsTargetTest.hpp  PerformanceBenchmark.cpp  PerformanceBenchmark.hpp
tests/unit/behavior/: behavior_engine_test.cpp  geometry_test.cpp
tests/unit/core/: config_service_test.cpp  event_bus_test.cpp  ring_buffer_test.cpp  stage_metrics_test.cpp  thread_pool_test.cpp
tests/unit/database/: database_test.cpp
tests/unit/recognition/: embedding_math_test.cpp  face_pipeline_test.cpp
tests/unit/recording/: recorder_test.cpp  rolling_buffer_test.cpp  snapshot_capture_test.cpp  storage_manager_test.cpp
tests/unit/threat/: behavior_fusion_test.cpp  threat_engine_test.cpp  threat_history_test.cpp  threat_scorer_test.cpp
tests/unit/tracking/: iou_matcher_test.cpp  kalman_predictor_test.cpp  object_tracker_test.cpp
tests/unit/ui/hud/: hud_renderer_test.cpp
tests/unit/utils/: cv_helpers_test.cpp  fps_counter_test.cpp  path_resolver_test.cpp  system_metrics_test.cpp  timer_test.cpp
tests/unit/vision/camera/: camera_engine_test.cpp  camera_types_test.cpp  frame_buffer_test.cpp  synthetic_camera_test.cpp
tests/unit/vision/motion/: blob_analyzer_test.cpp  morphology_filter_test.cpp  motion_engine_test.cpp
(+241 files in other folders)
